--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,31 @@
 
     <!-- ios -->
     <platform name="ios">
+        <config-file target="*-Release.plist" parent="com.apple.developer.pass-type-identifiers" mode="replace">
+            <array>
+                <string>$(TeamIdentifierPrefix)*</string>
+            </array>
+        </config-file>
+        <config-file target="*-Debug.plist" parent="com.apple.developer.pass-type-identifiers" mode="replace">
+            <array>
+                <string>$(TeamIdentifierPrefix)*</string>
+            </array>
+        </config-file>
+        <config-file target="*.plist" parent="com.apple.developer.pass-type-identifiers" mode="replace">
+            <array>
+                <string>$(TeamIdentifierPrefix)*</string>
+            </array>
+        </config-file>
+        <config-file target="Entitlements.plist" parent="com.apple.developer.pass-type-identifiers" mode="replace">
+            <array>
+                <string>$(TeamIdentifierPrefix)*</string>
+            </array>
+        </config-file>
+        <config-file target="Entitlements-*.plist" parent="com.apple.developer.pass-type-identifiers" mode="replace">
+            <array>
+                <string>$(TeamIdentifierPrefix)*</string>
+            </array>
+        </config-file>
 
         <config-file target="config.xml" parent="/*">
             <feature name="Passbook">
